# machine-setup

./: .gitignore  README.md  start-here.sh
dotfiles/: .bash_profile  .vimrc  (+1 more)
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/: .gitignore  README.md  add-admin.sh  add-new-users.sh  add-ous.sh  bootstrap.sh  group-nick.sh  init.sh  list-ldap-directory.sh  pyproject.toml  update-groups.sh
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/bootstrap/: 01-init-structure.ldif  bootstrap-ldap.sh
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/groups/: assign-members.ldif
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/src/ldap_manager/: __init__.py  config.py  database.py  dto.py  ldap.py  models.py  project.py  sync.py
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/src/ldap_manager/cli/: main.py  parser.py
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/src/ldap_manager/ldap/: client.py
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/src/ldap_manager/managers/: group_manager.py  user_manager.py
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/tests/: conftest.py  test_group_manager.py  test_models.py  test_project.py  test_sync.py  test_user_manager.py
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/tests/test_ldap/test_directories/: test_openldap.py
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/user-groups/: nick.ldif
llm-serving/container-recipes/vllm-nginx-ldap-keycloak/ldap/users/: admin.ldif  nick.ldif  romanrm.ldif  swanmb.ldif
(+126 files in other folders)
